// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<List /> should render List with default properties 1`] = `
.c0.c0.c0.c0.c0 {
  list-style-type: none;
  padding: 0px;
  margin: 0px;
}

.c2.c2.c2.c2.c2 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  margin-bottom: 8px;
}

.c3.c3.c3.c3.c3 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-self: flex-start;
  -ms-flex-item-align: start;
  align-self: flex-start;
  margin-top: 7px;
  margin-right: 8px;
}

.c4.c4.c4.c4.c4 {
  color: hsla(212,39%,16%,1);
  font-family: "Inter","Inter Fallback Arial",Arial;
  font-size: 0.875rem;
  font-weight: 400;
  font-style: normal;
  -webkit-text-decoration-line: none;
  text-decoration-line: none;
  line-height: 1.25rem;
  -webkit-letter-spacing: 0px;
  -moz-letter-spacing: 0px;
  -ms-letter-spacing: 0px;
  letter-spacing: 0px;
  margin: 0;
  padding: 0;
}

.c1.c1.c1.c1.c1 {
  margin-left: 4px;
}

.c5.c5.c5.c5.c5 {
  margin-left: 16px;
}

<div>
  <div
    class=""
    data-blade-component="base-box"
  >
    <ul
      class="List__StyledUnorderedList-bqf6r7-1 c0"
      data-blade-component="list"
      role="list"
    >
      <li
        class=" c1"
        data-blade-component="list-item"
      >
        <div
          class="c2"
          data-blade-component="base-box"
        >
          <div
            class="c3"
            data-blade-component="base-box"
          >
            <svg
              aria-hidden="true"
              class="Svgweb__StyledSvg-vcmjs8-0"
              data-blade-component="icon"
              fill="none"
              height="6px"
              viewBox="0 0 6 6"
              width="6px"
            >
              <circle
                cx="3px"
                cy="3px"
                data-blade-component="svg-circle"
                fill="hsla(211, 22%, 56%, 1)"
                fill-opacity="0.48"
                r="3px"
              />
            </svg>
          </div>
          <p
            class="c4"
            data-blade-component="text"
          >
            Level 1
          </p>
        </div>
        <div
          class=""
          data-blade-component="base-box"
        >
          <ul
            class="List__StyledUnorderedList-bqf6r7-1 c0"
            data-blade-component="list"
            role="list"
          >
            <li
              class=" c5"
              data-blade-component="list-item"
            >
              <div
                class="c2"
                data-blade-component="base-box"
              >
                <div
                  class="c3"
                  data-blade-component="base-box"
                >
                  <svg
                    aria-hidden="true"
                    class="Svgweb__StyledSvg-vcmjs8-0"
                    data-blade-component="icon"
                    fill="none"
                    height="6px"
                    viewBox="0 0 6 6"
                    width="6px"
                  >
                    <circle
                      cx="3px"
                      cy="3px"
                      data-blade-component="svg-circle"
                      r="2.5px"
                      stroke="hsla(211, 22%, 56%, 1)"
                    />
                  </svg>
                </div>
                <p
                  class="c4"
                  data-blade-component="text"
                >
                  Level 2
                </p>
              </div>
              <div
                class=""
                data-blade-component="base-box"
              >
                <ul
                  class="List__StyledUnorderedList-bqf6r7-1 c0"
                  data-blade-component="list"
                  role="list"
                >
                  <li
                    class=" c5"
                    data-blade-component="list-item"
                  >
                    <div
                      class="c2"
                      data-blade-component="base-box"
                    >
                      <div
                        class="c3"
                        data-blade-component="base-box"
                      >
                        <svg
                          aria-hidden="true"
                          class="Svgweb__StyledSvg-vcmjs8-0"
                          data-blade-component="icon"
                          fill="none"
                          height="6px"
                          viewBox="0 0 6 6"
                          width="6px"
                        >
                          <rect
                            data-blade-component="svg-rect"
                            fill="hsla(211, 22%, 56%, 1)"
                            fill-opacity="0.48"
                            height="6px"
                            rx="1px"
                            width="6px"
                          />
                        </svg>
                      </div>
                      <p
                        class="c4"
                        data-blade-component="text"
                      >
                        Level 3
                      </p>
                    </div>
                  </li>
                </ul>
              </div>
            </li>
          </ul>
        </div>
      </li>
    </ul>
  </div>
</div>
`;

exports[`<List /> should render List with inline ListItemCode 1`] = `
.c0.c0.c0.c0.c0 {
  list-style-type: none;
  padding: 0px;
  margin: 0px;
}

.c2.c2.c2.c2.c2 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  margin-bottom: 8px;
}

.c3.c3.c3.c3.c3 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-self: flex-start;
  -ms-flex-item-align: start;
  align-self: flex-start;
  margin-top: 7px;
  margin-right: 8px;
}

.c4.c4.c4.c4.c4 {
  color: hsla(212,39%,16%,1);
  font-family: "Inter","Inter Fallback Arial",Arial;
  font-size: 0.875rem;
  font-weight: 400;
  font-style: normal;
  -webkit-text-decoration-line: none;
  text-decoration-line: none;
  line-height: 1.25rem;
  -webkit-letter-spacing: 0px;
  -moz-letter-spacing: 0px;
  -ms-letter-spacing: 0px;
  letter-spacing: 0px;
  margin: 0;
  padding: 0;
}

.c6.c6.c6.c6.c6 {
  color: hsla(211,26%,34%,1);
  font-family: "Menlo",San Francisco Mono,Courier New,Roboto Mono,monospace;
  font-size: 0.625rem;
  font-weight: 400;
  font-style: normal;
  -webkit-text-decoration-line: none;
  text-decoration-line: none;
  line-height: 0.875rem;
  -webkit-letter-spacing: 0px;
  -moz-letter-spacing: 0px;
  -ms-letter-spacing: 0px;
  letter-spacing: 0px;
  margin: 0;
  padding: 0;
}

.c5.c5.c5.c5.c5 {
  padding: 0px 4px;
  background-color: hsla(211,20%,52%,0.09);
  border-radius: 4px;
  display: inline-block;
  vertical-align: middle;
  line-height: 0rem;
}

.c1.c1.c1.c1.c1 {
  margin-left: 4px;
}

<div>
  <div
    class=""
    data-blade-component="base-box"
  >
    <ul
      class="List__StyledUnorderedList-bqf6r7-1 c0"
      data-blade-component="list"
      role="list"
    >
      <li
        class=" c1"
        data-blade-component="list-item"
      >
        <div
          class="c2"
          data-blade-component="base-box"
        >
          <div
            class="c3"
            data-blade-component="base-box"
          >
            <svg
              aria-hidden="true"
              class="Svgweb__StyledSvg-vcmjs8-0"
              data-blade-component="icon"
              fill="none"
              height="6px"
              viewBox="0 0 6 6"
              width="6px"
            >
              <circle
                cx="3px"
                cy="3px"
                data-blade-component="svg-circle"
                fill="hsla(211, 22%, 56%, 1)"
                fill-opacity="0.48"
                r="3px"
              />
            </svg>
          </div>
          <p
            class="c4"
            data-blade-component="text"
          >
            Level 1 
            <span
              class=" c5"
              data-blade-component="code"
            >
              <code
                class="c6"
                data-blade-component="base-text"
              >
                Google
              </code>
            </span>
          </p>
        </div>
      </li>
      <li
        class=" c1"
        data-blade-component="list-item"
      >
        <div
          class="c2"
          data-blade-component="base-box"
        >
          <div
            class="c3"
            data-blade-component="base-box"
          >
            <svg
              aria-hidden="true"
              class="Svgweb__StyledSvg-vcmjs8-0"
              data-blade-component="icon"
              fill="none"
              height="6px"
              viewBox="0 0 6 6"
              width="6px"
            >
              <circle
                cx="3px"
                cy="3px"
                data-blade-component="svg-circle"
                fill="hsla(211, 22%, 56%, 1)"
                fill-opacity="0.48"
                r="3px"
              />
            </svg>
          </div>
          <p
            class="c4"
            data-blade-component="text"
          >
            Level 2
          </p>
        </div>
      </li>
    </ul>
  </div>
</div>
`;

exports[`<List /> should render List with inline ListItemText 1`] = `
.c0.c0.c0.c0.c0 {
  list-style-type: none;
  padding: 0px;
  margin: 0px;
}

.c2.c2.c2.c2.c2 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  margin-bottom: 8px;
}

.c3.c3.c3.c3.c3 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-self: flex-start;
  -ms-flex-item-align: start;
  align-self: flex-start;
  margin-top: 7px;
  margin-right: 8px;
}

.c4.c4.c4.c4.c4 {
  color: hsla(212,39%,16%,1);
  font-family: "Inter","Inter Fallback Arial",Arial;
  font-size: 0.875rem;
  font-weight: 400;
  font-style: normal;
  -webkit-text-decoration-line: none;
  text-decoration-line: none;
  line-height: 1.25rem;
  -webkit-letter-spacing: 0px;
  -moz-letter-spacing: 0px;
  -ms-letter-spacing: 0px;
  letter-spacing: 0px;
  margin: 0;
  padding: 0;
}

.c5.c5.c5.c5.c5 {
  color: hsla(227,71%,51%,1);
  font-family: "Inter","Inter Fallback Arial",Arial;
  font-size: 0.875rem;
  font-weight: 600;
  font-style: normal;
  -webkit-text-decoration-line: none;
  text-decoration-line: none;
  line-height: 1.25rem;
  -webkit-letter-spacing: 0px;
  -moz-letter-spacing: 0px;
  -ms-letter-spacing: 0px;
  letter-spacing: 0px;
  margin: 0;
  padding: 0;
}

.c1.c1.c1.c1.c1 {
  margin-left: 4px;
}

<div>
  <div
    class=""
    data-blade-component="base-box"
  >
    <ul
      class="List__StyledUnorderedList-bqf6r7-1 c0"
      data-blade-component="list"
      role="list"
    >
      <li
        class=" c1"
        data-blade-component="list-item"
      >
        <div
          class="c2"
          data-blade-component="base-box"
        >
          <div
            class="c3"
            data-blade-component="base-box"
          >
            <svg
              aria-hidden="true"
              class="Svgweb__StyledSvg-vcmjs8-0"
              data-blade-component="icon"
              fill="none"
              height="6px"
              viewBox="0 0 6 6"
              width="6px"
            >
              <circle
                cx="3px"
                cy="3px"
                data-blade-component="svg-circle"
                fill="hsla(211, 22%, 56%, 1)"
                fill-opacity="0.48"
                r="3px"
              />
            </svg>
          </div>
          <p
            class="c4"
            data-blade-component="text"
          >
            <span
              class="c5"
              data-blade-component="text"
            >
              Level 1
            </span>
          </p>
        </div>
      </li>
    </ul>
  </div>
</div>
`;

exports[`<List /> should render large ordered List 1`] = `
.c6.c6.c6.c6.c6 {
  list-style-type: none;
  padding: 0px;
  margin: 0px;
}

.c0.c0.c0.c0.c0 {
  list-style-type: none;
  padding: 0px;
  margin: 0px;
}

.c2.c2.c2.c2.c2 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  margin-bottom: 8px;
}

.c3.c3.c3.c3.c3 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-align-self: flex-start;
  -ms-flex-item-align: start;
  align-self: flex-start;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  margin-top: 0px;
  margin-right: 4px;
  height: 24px;
  width: 24px;
}

.c8.c8.c8.c8.c8 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-self: flex-start;
  -ms-flex-item-align: start;
  align-self: flex-start;
  margin-top: 10px;
  margin-right: 8px;
}

.c4.c4.c4.c4.c4 {
  color: hsla(211,22%,56%,1);
  font-family: "Inter","Inter Fallback Arial",Arial;
  font-size: 1rem;
  font-weight: 400;
  font-style: normal;
  -webkit-text-decoration-line: none;
  text-decoration-line: none;
  line-height: 1.5rem;
  -webkit-letter-spacing: 0px;
  -moz-letter-spacing: 0px;
  -ms-letter-spacing: 0px;
  letter-spacing: 0px;
  margin: 0;
  padding: 0;
}

.c5.c5.c5.c5.c5 {
  color: hsla(212,39%,16%,1);
  font-family: "Inter","Inter Fallback Arial",Arial;
  font-size: 1rem;
  font-weight: 400;
  font-style: normal;
  -webkit-text-decoration-line: none;
  text-decoration-line: none;
  line-height: 1.5rem;
  -webkit-letter-spacing: 0px;
  -moz-letter-spacing: 0px;
  -ms-letter-spacing: 0px;
  letter-spacing: 0px;
  margin: 0;
  padding: 0;
}

.c1.c1.c1.c1.c1 {
  margin-left: 0;
}

.c7.c7.c7.c7.c7 {
  margin-left: 16px;
}

<div>
  <div
    class=""
    data-blade-component="base-box"
  >
    <ol
      class="List__StyledOrderedList-bqf6r7-0 c0"
      data-blade-component="list"
      role="list"
    >
      <li
        class=" c1"
        data-blade-component="list-item"
      >
        <div
          class="c2"
          data-blade-component="base-box"
        >
          <div
            class="c3"
            data-blade-component="base-box"
          >
            <p
              class="c4"
              data-blade-component="text"
            >
              1.
            </p>
          </div>
          <p
            class="c5"
            data-blade-component="text"
          >
            Level 1
          </p>
        </div>
        <div
          class=""
          data-blade-component="base-box"
        >
          <ul
            class="List__StyledUnorderedList-bqf6r7-1 c6"
            data-blade-component="list"
            role="list"
          >
            <li
              class=" c7"
              data-blade-component="list-item"
            >
              <div
                class="c2"
                data-blade-component="base-box"
              >
                <div
                  class="c8"
                  data-blade-component="base-box"
                >
                  <svg
                    aria-hidden="true"
                    class="Svgweb__StyledSvg-vcmjs8-0"
                    data-blade-component="icon"
                    fill="none"
                    height="6px"
                    viewBox="0 0 6 6"
                    width="6px"
                  >
                    <circle
                      cx="3px"
                      cy="3px"
                      data-blade-component="svg-circle"
                      r="2.5px"
                      stroke="hsla(211, 22%, 56%, 1)"
                    />
                  </svg>
                </div>
                <p
                  class="c5"
                  data-blade-component="text"
                >
                  Level 2
                </p>
              </div>
              <div
                class=""
                data-blade-component="base-box"
              >
                <ul
                  class="List__StyledUnorderedList-bqf6r7-1 c6"
                  data-blade-component="list"
                  role="list"
                >
                  <li
                    class=" c7"
                    data-blade-component="list-item"
                  >
                    <div
                      class="c2"
                      data-blade-component="base-box"
                    >
                      <div
                        class="c8"
                        data-blade-component="base-box"
                      >
                        <svg
                          aria-hidden="true"
                          class="Svgweb__StyledSvg-vcmjs8-0"
                          data-blade-component="icon"
                          fill="none"
                          height="6px"
                          viewBox="0 0 6 6"
                          width="6px"
                        >
                          <rect
                            data-blade-component="svg-rect"
                            fill="hsla(211, 22%, 56%, 1)"
                            fill-opacity="0.48"
                            height="6px"
                            rx="1px"
                            width="6px"
                          />
                        </svg>
                      </div>
                      <p
                        class="c5"
                        data-blade-component="text"
                      >
                        Level 3
                      </p>
                    </div>
                  </li>
                </ul>
              </div>
            </li>
          </ul>
        </div>
      </li>
    </ol>
  </div>
</div>
`;

exports[`<List /> should render large ordered-filled List 1`] = `
.c0.c0.c0.c0.c0 {
  list-style-type: none;
  padding: 0px;
  margin: 0px;
}

.c2.c2.c2.c2.c2 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  margin-bottom: 8px;
}

.c3.c3.c3.c3.c3 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-align-self: flex-start;
  -ms-flex-item-align: start;
  align-self: flex-start;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  margin-top: 0px;
  margin-right: 8px;
  height: 24px;
  width: 24px;
  background-color: hsla(211,20%,52%,0.09);
  border-radius: 9999px;
}

.c4.c4.c4.c4.c4 {
  color: hsla(211,22%,56%,1);
  font-family: "Inter","Inter Fallback Arial",Arial;
  font-size: 0.625rem;
  font-weight: 400;
  font-style: normal;
  -webkit-text-decoration-line: none;
  text-decoration-line: none;
  line-height: 0.875rem;
  -webkit-letter-spacing: 0px;
  -moz-letter-spacing: 0px;
  -ms-letter-spacing: 0px;
  letter-spacing: 0px;
  margin: 0;
  padding: 0;
}

.c5.c5.c5.c5.c5 {
  color: hsla(212,39%,16%,1);
  font-family: "Inter","Inter Fallback Arial",Arial;
  font-size: 1rem;
  font-weight: 400;
  font-style: normal;
  -webkit-text-decoration-line: none;
  text-decoration-line: none;
  line-height: 1.5rem;
  -webkit-letter-spacing: 0px;
  -moz-letter-spacing: 0px;
  -ms-letter-spacing: 0px;
  letter-spacing: 0px;
  margin: 0;
  padding: 0;
}

.c1.c1.c1.c1.c1 {
  margin-left: 0;
}

<div>
  <div
    class=""
    data-blade-component="base-box"
  >
    <ol
      class="List__StyledOrderedList-bqf6r7-0 c0"
      data-blade-component="list"
      role="list"
    >
      <li
        class=" c1"
        data-blade-component="list-item"
      >
        <div
          class="c2"
          data-blade-component="base-box"
        >
          <div
            class="c3"
            data-blade-component="base-box"
          >
            <p
              class="c4"
              data-blade-component="text"
            >
              1
            </p>
          </div>
          <p
            class="c5"
            data-blade-component="text"
          >
            Level 1
          </p>
        </div>
      </li>
      <li
        class=" c1"
        data-blade-component="list-item"
      >
        <div
          class="c2"
          data-blade-component="base-box"
        >
          <div
            class="c3"
            data-blade-component="base-box"
          >
            <p
              class="c4"
              data-blade-component="text"
            >
              2
            </p>
          </div>
          <p
            class="c5"
            data-blade-component="text"
          >
            Level 2
          </p>
        </div>
      </li>
      <li
        class=" c1"
        data-blade-component="list-item"
      >
        <div
          class="c2"
          data-blade-component="base-box"
        >
          <div
            class="c3"
            data-blade-component="base-box"
          >
            <p
              class="c4"
              data-blade-component="text"
            >
              3
            </p>
          </div>
          <p
            class="c5"
            data-blade-component="text"
          >
            Level 3
          </p>
        </div>
      </li>
    </ol>
  </div>
</div>
`;

exports[`<List /> should render large unordered List with icon 1`] = `
.c0.c0.c0.c0.c0 {
  list-style-type: none;
  padding: 0px;
  margin: 0px;
}

.c2.c2.c2.c2.c2 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  margin-bottom: 8px;
}

.c3.c3.c3.c3.c3 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-self: flex-start;
  -ms-flex-item-align: start;
  align-self: flex-start;
  margin-top: 5px;
  margin-right: 8px;
}

.c6.c6.c6.c6.c6 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-self: flex-start;
  -ms-flex-item-align: start;
  align-self: flex-start;
  margin-top: 10px;
  margin-right: 8px;
}

.c4.c4.c4.c4.c4 {
  color: hsla(212,39%,16%,1);
  font-family: "Inter","Inter Fallback Arial",Arial;
  font-size: 1rem;
  font-weight: 400;
  font-style: normal;
  -webkit-text-decoration-line: none;
  text-decoration-line: none;
  line-height: 1.5rem;
  -webkit-letter-spacing: 0px;
  -moz-letter-spacing: 0px;
  -ms-letter-spacing: 0px;
  letter-spacing: 0px;
  margin: 0;
  padding: 0;
}

.c1.c1.c1.c1.c1 {
  margin-left: 0;
}

.c5.c5.c5.c5.c5 {
  margin-left: 16px;
}

<div>
  <div
    class=""
    data-blade-component="base-box"
  >
    <ul
      class="List__StyledUnorderedList-bqf6r7-1 c0"
      data-blade-component="list"
      role="list"
    >
      <li
        class=" c1"
        data-blade-component="list-item"
      >
        <div
          class="c2"
          data-blade-component="base-box"
        >
          <div
            class="c3"
            data-blade-component="base-box"
          >
            <svg
              aria-hidden="true"
              class="Svgweb__StyledSvg-vcmjs8-0"
              data-blade-component="icon"
              fill="none"
              height="20px"
              viewBox="0 0 24 24"
              width="20px"
            >
              <path
                d="M14.7071 5.29289C14.3166 4.90237 13.6834 4.90237 13.2929 5.29289C12.9024 5.68342 12.9024 6.31658 13.2929 6.70711L17.5858 11H4C3.44772 11 3 11.4477 3 12C3 12.5523 3.44772 13 4 13H17.5858L13.2929 17.2929C12.9024 17.6834 12.9024 18.3166 13.2929 18.7071C13.6834 19.0976 14.3166 19.0976 14.7071 18.7071L20.7071 12.7071C21.0976 12.3166 21.0976 11.6834 20.7071 11.2929L14.7071 5.29289Z"
                data-blade-component="svg-path"
                fill="hsla(211, 22%, 56%, 1)"
              />
            </svg>
          </div>
          <p
            class="c4"
            data-blade-component="text"
          >
            Level 1
          </p>
        </div>
        <div
          class=""
          data-blade-component="base-box"
        >
          <ul
            class="List__StyledUnorderedList-bqf6r7-1 c0"
            data-blade-component="list"
            role="list"
          >
            <li
              class=" c5"
              data-blade-component="list-item"
            >
              <div
                class="c2"
                data-blade-component="base-box"
              >
                <div
                  class="c3"
                  data-blade-component="base-box"
                >
                  <svg
                    aria-hidden="true"
                    class="Svgweb__StyledSvg-vcmjs8-0"
                    data-blade-component="icon"
                    fill="none"
                    height="20px"
                    viewBox="0 0 24 24"
                    width="20px"
                  >
                    <path
                      d="M12.7071 3.29289C12.3166 2.90237 11.6834 2.90237 11.2929 3.29289L5.29289 9.29289C4.90237 9.68342 4.90237 10.3166 5.29289 10.7071C5.68342 11.0976 6.31658 11.0976 6.70711 10.7071L11 6.41421V20C11 20.5523 11.4477 21 12 21C12.5523 21 13 20.5523 13 20V6.41421L17.2929 10.7071C17.6834 11.0976 18.3166 11.0976 18.7071 10.7071C19.0976 10.3166 19.0976 9.68342 18.7071 9.29289L12.7071 3.29289Z"
                      data-blade-component="svg-path"
                      fill="hsla(211, 22%, 56%, 1)"
                    />
                  </svg>
                </div>
                <p
                  class="c4"
                  data-blade-component="text"
                >
                  Level 2
                </p>
              </div>
              <div
                class=""
                data-blade-component="base-box"
              >
                <ul
                  class="List__StyledUnorderedList-bqf6r7-1 c0"
                  data-blade-component="list"
                  role="list"
                >
                  <li
                    class=" c5"
                    data-blade-component="list-item"
                  >
                    <div
                      class="c2"
                      data-blade-component="base-box"
                    >
                      <div
                        class="c6"
                        data-blade-component="base-box"
                      >
                        <svg
                          aria-hidden="true"
                          class="Svgweb__StyledSvg-vcmjs8-0"
                          data-blade-component="icon"
                          fill="none"
                          height="6px"
                          viewBox="0 0 6 6"
                          width="6px"
                        >
                          <rect
                            data-blade-component="svg-rect"
                            fill="hsla(211, 22%, 56%, 1)"
                            fill-opacity="0.48"
                            height="6px"
                            rx="1px"
                            width="6px"
                          />
                        </svg>
                      </div>
                      <p
                        class="c4"
                        data-blade-component="text"
                      >
                        Level 3
                      </p>
                    </div>
                  </li>
                </ul>
              </div>
            </li>
          </ul>
        </div>
      </li>
    </ul>
  </div>
</div>
`;

exports[`<List /> should render medium ordered List 1`] = `
.c6.c6.c6.c6.c6 {
  list-style-type: none;
  padding: 0px;
  margin: 0px;
}

.c0.c0.c0.c0.c0 {
  list-style-type: none;
  padding: 0px;
  margin: 0px;
}

.c2.c2.c2.c2.c2 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  margin-bottom: 8px;
}

.c3.c3.c3.c3.c3 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-align-self: flex-start;
  -ms-flex-item-align: start;
  align-self: flex-start;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  margin-top: 0px;
  margin-right: 4px;
  height: 20px;
  width: 20px;
}

.c8.c8.c8.c8.c8 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-self: flex-start;
  -ms-flex-item-align: start;
  align-self: flex-start;
  margin-top: 7px;
  margin-right: 8px;
}

.c4.c4.c4.c4.c4 {
  color: hsla(211,22%,56%,1);
  font-family: "Inter","Inter Fallback Arial",Arial;
  font-size: 0.875rem;
  font-weight: 400;
  font-style: normal;
  -webkit-text-decoration-line: none;
  text-decoration-line: none;
  line-height: 1.25rem;
  -webkit-letter-spacing: 0px;
  -moz-letter-spacing: 0px;
  -ms-letter-spacing: 0px;
  letter-spacing: 0px;
  margin: 0;
  padding: 0;
}

.c5.c5.c5.c5.c5 {
  color: hsla(212,39%,16%,1);
  font-family: "Inter","Inter Fallback Arial",Arial;
  font-size: 0.875rem;
  font-weight: 400;
  font-style: normal;
  -webkit-text-decoration-line: none;
  text-decoration-line: none;
  line-height: 1.25rem;
  -webkit-letter-spacing: 0px;
  -moz-letter-spacing: 0px;
  -ms-letter-spacing: 0px;
  letter-spacing: 0px;
  margin: 0;
  padding: 0;
}

.c1.c1.c1.c1.c1 {
  margin-left: 0;
}

.c7.c7.c7.c7.c7 {
  margin-left: 16px;
}

<div>
  <div
    class=""
    data-blade-component="base-box"
  >
    <ol
      class="List__StyledOrderedList-bqf6r7-0 c0"
      data-blade-component="list"
      role="list"
    >
      <li
        class=" c1"
        data-blade-component="list-item"
      >
        <div
          class="c2"
          data-blade-component="base-box"
        >
          <div
            class="c3"
            data-blade-component="base-box"
          >
            <p
              class="c4"
              data-blade-component="text"
            >
              1.
            </p>
          </div>
          <p
            class="c5"
            data-blade-component="text"
          >
            Level 1
          </p>
        </div>
        <div
          class=""
          data-blade-component="base-box"
        >
          <ul
            class="List__StyledUnorderedList-bqf6r7-1 c6"
            data-blade-component="list"
            role="list"
          >
            <li
              class=" c7"
              data-blade-component="list-item"
            >
              <div
                class="c2"
                data-blade-component="base-box"
              >
                <div
                  class="c8"
                  data-blade-component="base-box"
                >
                  <svg
                    aria-hidden="true"
                    class="Svgweb__StyledSvg-vcmjs8-0"
                    data-blade-component="icon"
                    fill="none"
                    height="6px"
                    viewBox="0 0 6 6"
                    width="6px"
                  >
                    <circle
                      cx="3px"
                      cy="3px"
                      data-blade-component="svg-circle"
                      r="2.5px"
                      stroke="hsla(211, 22%, 56%, 1)"
                    />
                  </svg>
                </div>
                <p
                  class="c5"
                  data-blade-component="text"
                >
                  Level 2
                </p>
              </div>
              <div
                class=""
                data-blade-component="base-box"
              >
                <ul
                  class="List__StyledUnorderedList-bqf6r7-1 c6"
                  data-blade-component="list"
                  role="list"
                >
                  <li
                    class=" c7"
                    data-blade-component="list-item"
                  >
                    <div
                      class="c2"
                      data-blade-component="base-box"
                    >
                      <div
                        class="c8"
                        data-blade-component="base-box"
                      >
                        <svg
                          aria-hidden="true"
                          class="Svgweb__StyledSvg-vcmjs8-0"
                          data-blade-component="icon"
                          fill="none"
                          height="6px"
                          viewBox="0 0 6 6"
                          width="6px"
                        >
                          <rect
                            data-blade-component="svg-rect"
                            fill="hsla(211, 22%, 56%, 1)"
                            fill-opacity="0.48"
                            height="6px"
                            rx="1px"
                            width="6px"
                          />
                        </svg>
                      </div>
                      <p
                        class="c5"
                        data-blade-component="text"
                      >
                        Level 3
                      </p>
                    </div>
                  </li>
                </ul>
              </div>
            </li>
          </ul>
        </div>
      </li>
    </ol>
  </div>
</div>
`;

exports[`<List /> should render medium ordered-filled List 1`] = `
.c0.c0.c0.c0.c0 {
  list-style-type: none;
  padding: 0px;
  margin: 0px;
}

.c2.c2.c2.c2.c2 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  margin-bottom: 8px;
}

.c3.c3.c3.c3.c3 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-align-self: flex-start;
  -ms-flex-item-align: start;
  align-self: flex-start;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  margin-top: 0px;
  margin-right: 8px;
  height: 20px;
  width: 20px;
  background-color: hsla(211,20%,52%,0.09);
  border-radius: 9999px;
}

.c4.c4.c4.c4.c4 {
  color: hsla(211,22%,56%,1);
  font-family: "Inter","Inter Fallback Arial",Arial;
  font-size: 0.625rem;
  font-weight: 400;
  font-style: normal;
  -webkit-text-decoration-line: none;
  text-decoration-line: none;
  line-height: 0.875rem;
  -webkit-letter-spacing: 0px;
  -moz-letter-spacing: 0px;
  -ms-letter-spacing: 0px;
  letter-spacing: 0px;
  margin: 0;
  padding: 0;
}

.c5.c5.c5.c5.c5 {
  color: hsla(212,39%,16%,1);
  font-family: "Inter","Inter Fallback Arial",Arial;
  font-size: 0.875rem;
  font-weight: 400;
  font-style: normal;
  -webkit-text-decoration-line: none;
  text-decoration-line: none;
  line-height: 1.25rem;
  -webkit-letter-spacing: 0px;
  -moz-letter-spacing: 0px;
  -ms-letter-spacing: 0px;
  letter-spacing: 0px;
  margin: 0;
  padding: 0;
}

.c1.c1.c1.c1.c1 {
  margin-left: 0;
}

<div>
  <div
    class=""
    data-blade-component="base-box"
  >
    <ol
      class="List__StyledOrderedList-bqf6r7-0 c0"
      data-blade-component="list"
      role="list"
    >
      <li
        class=" c1"
        data-blade-component="list-item"
      >
        <div
          class="c2"
          data-blade-component="base-box"
        >
          <div
            class="c3"
            data-blade-component="base-box"
          >
            <p
              class="c4"
              data-blade-component="text"
            >
              1
            </p>
          </div>
          <p
            class="c5"
            data-blade-component="text"
          >
            Level 1
          </p>
        </div>
      </li>
      <li
        class=" c1"
        data-blade-component="list-item"
      >
        <div
          class="c2"
          data-blade-component="base-box"
        >
          <div
            class="c3"
            data-blade-component="base-box"
          >
            <p
              class="c4"
              data-blade-component="text"
            >
              2
            </p>
          </div>
          <p
            class="c5"
            data-blade-component="text"
          >
            Level 2
          </p>
        </div>
      </li>
      <li
        class=" c1"
        data-blade-component="list-item"
      >
        <div
          class="c2"
          data-blade-component="base-box"
        >
          <div
            class="c3"
            data-blade-component="base-box"
          >
            <p
              class="c4"
              data-blade-component="text"
            >
              3
            </p>
          </div>
          <p
            class="c5"
            data-blade-component="text"
          >
            Level 3
          </p>
        </div>
      </li>
    </ol>
  </div>
</div>
`;

exports[`<List /> should render medium unordered List with icon 1`] = `
.c0.c0.c0.c0.c0 {
  list-style-type: none;
  padding: 0px;
  margin: 0px;
}

.c2.c2.c2.c2.c2 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  margin-bottom: 8px;
}

.c3.c3.c3.c3.c3 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-self: flex-start;
  -ms-flex-item-align: start;
  align-self: flex-start;
  margin-top: 2px;
  margin-right: 8px;
}

.c6.c6.c6.c6.c6 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-self: flex-start;
  -ms-flex-item-align: start;
  align-self: flex-start;
  margin-top: 7px;
  margin-right: 8px;
}

.c4.c4.c4.c4.c4 {
  color: hsla(212,39%,16%,1);
  font-family: "Inter","Inter Fallback Arial",Arial;
  font-size: 0.875rem;
  font-weight: 400;
  font-style: normal;
  -webkit-text-decoration-line: none;
  text-decoration-line: none;
  line-height: 1.25rem;
  -webkit-letter-spacing: 0px;
  -moz-letter-spacing: 0px;
  -ms-letter-spacing: 0px;
  letter-spacing: 0px;
  margin: 0;
  padding: 0;
}

.c1.c1.c1.c1.c1 {
  margin-left: 0;
}

.c5.c5.c5.c5.c5 {
  margin-left: 16px;
}

<div>
  <div
    class=""
    data-blade-component="base-box"
  >
    <ul
      class="List__StyledUnorderedList-bqf6r7-1 c0"
      data-blade-component="list"
      role="list"
    >
      <li
        class=" c1"
        data-blade-component="list-item"
      >
        <div
          class="c2"
          data-blade-component="base-box"
        >
          <div
            class="c3"
            data-blade-component="base-box"
          >
            <svg
              aria-hidden="true"
              class="Svgweb__StyledSvg-vcmjs8-0"
              data-blade-component="icon"
              fill="none"
              height="16px"
              viewBox="0 0 24 24"
              width="16px"
            >
              <path
                d="M14.7071 5.29289C14.3166 4.90237 13.6834 4.90237 13.2929 5.29289C12.9024 5.68342 12.9024 6.31658 13.2929 6.70711L17.5858 11H4C3.44772 11 3 11.4477 3 12C3 12.5523 3.44772 13 4 13H17.5858L13.2929 17.2929C12.9024 17.6834 12.9024 18.3166 13.2929 18.7071C13.6834 19.0976 14.3166 19.0976 14.7071 18.7071L20.7071 12.7071C21.0976 12.3166 21.0976 11.6834 20.7071 11.2929L14.7071 5.29289Z"
                data-blade-component="svg-path"
                fill="hsla(211, 22%, 56%, 1)"
              />
            </svg>
          </div>
          <p
            class="c4"
            data-blade-component="text"
          >
            Level 1
          </p>
        </div>
        <div
          class=""
          data-blade-component="base-box"
        >
          <ul
            class="List__StyledUnorderedList-bqf6r7-1 c0"
            data-blade-component="list"
            role="list"
          >
            <li
              class=" c5"
              data-blade-component="list-item"
            >
              <div
                class="c2"
                data-blade-component="base-box"
              >
                <div
                  class="c3"
                  data-blade-component="base-box"
                >
                  <svg
                    aria-hidden="true"
                    class="Svgweb__StyledSvg-vcmjs8-0"
                    data-blade-component="icon"
                    fill="none"
                    height="16px"
                    viewBox="0 0 24 24"
                    width="16px"
                  >
                    <path
                      d="M12.7071 3.29289C12.3166 2.90237 11.6834 2.90237 11.2929 3.29289L5.29289 9.29289C4.90237 9.68342 4.90237 10.3166 5.29289 10.7071C5.68342 11.0976 6.31658 11.0976 6.70711 10.7071L11 6.41421V20C11 20.5523 11.4477 21 12 21C12.5523 21 13 20.5523 13 20V6.41421L17.2929 10.7071C17.6834 11.0976 18.3166 11.0976 18.7071 10.7071C19.0976 10.3166 19.0976 9.68342 18.7071 9.29289L12.7071 3.29289Z"
                      data-blade-component="svg-path"
                      fill="hsla(211, 22%, 56%, 1)"
                    />
                  </svg>
                </div>
                <p
                  class="c4"
                  data-blade-component="text"
                >
                  Level 2
                </p>
              </div>
              <div
                class=""
                data-blade-component="base-box"
              >
                <ul
                  class="List__StyledUnorderedList-bqf6r7-1 c0"
                  data-blade-component="list"
                  role="list"
                >
                  <li
                    class=" c5"
                    data-blade-component="list-item"
                  >
                    <div
                      class="c2"
                      data-blade-component="base-box"
                    >
                      <div
                        class="c6"
                        data-blade-component="base-box"
                      >
                        <svg
                          aria-hidden="true"
                          class="Svgweb__StyledSvg-vcmjs8-0"
                          data-blade-component="icon"
                          fill="none"
                          height="6px"
                          viewBox="0 0 6 6"
                          width="6px"
                        >
                          <rect
                            data-blade-component="svg-rect"
                            fill="hsla(211, 22%, 56%, 1)"
                            fill-opacity="0.48"
                            height="6px"
                            rx="1px"
                            width="6px"
                          />
                        </svg>
                      </div>
                      <p
                        class="c4"
                        data-blade-component="text"
                      >
                        Level 3
                      </p>
                    </div>
                  </li>
                </ul>
              </div>
            </li>
          </ul>
        </div>
      </li>
    </ul>
  </div>
</div>
`;

exports[`<List /> should render small ordered List 1`] = `
.c6.c6.c6.c6.c6 {
  list-style-type: none;
  padding: 0px;
  margin: 0px;
}

.c0.c0.c0.c0.c0 {
  list-style-type: none;
  padding: 0px;
  margin: 0px;
}

.c2.c2.c2.c2.c2 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  margin-bottom: 8px;
}

.c3.c3.c3.c3.c3 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-align-self: flex-start;
  -ms-flex-item-align: start;
  align-self: flex-start;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  margin-top: 0px;
  margin-right: 4px;
  height: 16px;
  width: 16px;
}

.c8.c8.c8.c8.c8 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-self: flex-start;
  -ms-flex-item-align: start;
  align-self: flex-start;
  margin-top: 6px;
  margin-right: 8px;
}

.c4.c4.c4.c4.c4 {
  color: hsla(211,22%,56%,1);
  font-family: "Inter","Inter Fallback Arial",Arial;
  font-size: 0.75rem;
  font-weight: 400;
  font-style: normal;
  -webkit-text-decoration-line: none;
  text-decoration-line: none;
  line-height: 1.125rem;
  -webkit-letter-spacing: 0px;
  -moz-letter-spacing: 0px;
  -ms-letter-spacing: 0px;
  letter-spacing: 0px;
  margin: 0;
  padding: 0;
}

.c5.c5.c5.c5.c5 {
  color: hsla(212,39%,16%,1);
  font-family: "Inter","Inter Fallback Arial",Arial;
  font-size: 0.75rem;
  font-weight: 400;
  font-style: normal;
  -webkit-text-decoration-line: none;
  text-decoration-line: none;
  line-height: 1.125rem;
  -webkit-letter-spacing: 0px;
  -moz-letter-spacing: 0px;
  -ms-letter-spacing: 0px;
  letter-spacing: 0px;
  margin: 0;
  padding: 0;
}

.c1.c1.c1.c1.c1 {
  margin-left: 0;
}

.c7.c7.c7.c7.c7 {
  margin-left: 16px;
}

<div>
  <div
    class=""
    data-blade-component="base-box"
  >
    <ol
      class="List__StyledOrderedList-bqf6r7-0 c0"
      data-blade-component="list"
      role="list"
    >
      <li
        class=" c1"
        data-blade-component="list-item"
      >
        <div
          class="c2"
          data-blade-component="base-box"
        >
          <div
            class="c3"
            data-blade-component="base-box"
          >
            <p
              class="c4"
              data-blade-component="text"
            >
              1.
            </p>
          </div>
          <p
            class="c5"
            data-blade-component="text"
          >
            Level 1
          </p>
        </div>
        <div
          class=""
          data-blade-component="base-box"
        >
          <ul
            class="List__StyledUnorderedList-bqf6r7-1 c6"
            data-blade-component="list"
            role="list"
          >
            <li
              class=" c7"
              data-blade-component="list-item"
            >
              <div
                class="c2"
                data-blade-component="base-box"
              >
                <div
                  class="c8"
                  data-blade-component="base-box"
                >
                  <svg
                    aria-hidden="true"
                    class="Svgweb__StyledSvg-vcmjs8-0"
                    data-blade-component="icon"
                    fill="none"
                    height="6px"
                    viewBox="0 0 6 6"
                    width="6px"
                  >
                    <circle
                      cx="3px"
                      cy="3px"
                      data-blade-component="svg-circle"
                      r="2.5px"
                      stroke="hsla(211, 22%, 56%, 1)"
                    />
                  </svg>
                </div>
                <p
                  class="c5"
                  data-blade-component="text"
                >
                  Level 2
                </p>
              </div>
              <div
                class=""
                data-blade-component="base-box"
              >
                <ul
                  class="List__StyledUnorderedList-bqf6r7-1 c6"
                  data-blade-component="list"
                  role="list"
                >
                  <li
                    class=" c7"
                    data-blade-component="list-item"
                  >
                    <div
                      class="c2"
                      data-blade-component="base-box"
                    >
                      <div
                        class="c8"
                        data-blade-component="base-box"
                      >
                        <svg
                          aria-hidden="true"
                          class="Svgweb__StyledSvg-vcmjs8-0"
                          data-blade-component="icon"
                          fill="none"
                          height="6px"
                          viewBox="0 0 6 6"
                          width="6px"
                        >
                          <rect
                            data-blade-component="svg-rect"
                            fill="hsla(211, 22%, 56%, 1)"
                            fill-opacity="0.48"
                            height="6px"
                            rx="1px"
                            width="6px"
                          />
                        </svg>
                      </div>
                      <p
                        class="c5"
                        data-blade-component="text"
                      >
                        Level 3
                      </p>
                    </div>
                  </li>
                </ul>
              </div>
            </li>
          </ul>
        </div>
      </li>
    </ol>
  </div>
</div>
`;

exports[`<List /> should render small ordered-filled List 1`] = `
.c0.c0.c0.c0.c0 {
  list-style-type: none;
  padding: 0px;
  margin: 0px;
}

.c2.c2.c2.c2.c2 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  margin-bottom: 8px;
}

.c3.c3.c3.c3.c3 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-align-self: flex-start;
  -ms-flex-item-align: start;
  align-self: flex-start;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  margin-top: 0px;
  margin-right: 8px;
  height: 18px;
  width: 18px;
  background-color: hsla(211,20%,52%,0.09);
  border-radius: 9999px;
}

.c4.c4.c4.c4.c4 {
  color: hsla(211,22%,56%,1);
  font-family: "Inter","Inter Fallback Arial",Arial;
  font-size: 0.625rem;
  font-weight: 400;
  font-style: normal;
  -webkit-text-decoration-line: none;
  text-decoration-line: none;
  line-height: 0.875rem;
  -webkit-letter-spacing: 0px;
  -moz-letter-spacing: 0px;
  -ms-letter-spacing: 0px;
  letter-spacing: 0px;
  margin: 0;
  padding: 0;
}

.c5.c5.c5.c5.c5 {
  color: hsla(212,39%,16%,1);
  font-family: "Inter","Inter Fallback Arial",Arial;
  font-size: 0.75rem;
  font-weight: 400;
  font-style: normal;
  -webkit-text-decoration-line: none;
  text-decoration-line: none;
  line-height: 1.125rem;
  -webkit-letter-spacing: 0px;
  -moz-letter-spacing: 0px;
  -ms-letter-spacing: 0px;
  letter-spacing: 0px;
  margin: 0;
  padding: 0;
}

.c1.c1.c1.c1.c1 {
  margin-left: 0;
}

<div>
  <div
    class=""
    data-blade-component="base-box"
  >
    <ol
      class="List__StyledOrderedList-bqf6r7-0 c0"
      data-blade-component="list"
      role="list"
    >
      <li
        class=" c1"
        data-blade-component="list-item"
      >
        <div
          class="c2"
          data-blade-component="base-box"
        >
          <div
            class="c3"
            data-blade-component="base-box"
          >
            <p
              class="c4"
              data-blade-component="text"
            >
              1
            </p>
          </div>
          <p
            class="c5"
            data-blade-component="text"
          >
            Level 1
          </p>
        </div>
      </li>
      <li
        class=" c1"
        data-blade-component="list-item"
      >
        <div
          class="c2"
          data-blade-component="base-box"
        >
          <div
            class="c3"
            data-blade-component="base-box"
          >
            <p
              class="c4"
              data-blade-component="text"
            >
              2
            </p>
          </div>
          <p
            class="c5"
            data-blade-component="text"
          >
            Level 2
          </p>
        </div>
      </li>
      <li
        class=" c1"
        data-blade-component="list-item"
      >
        <div
          class="c2"
          data-blade-component="base-box"
        >
          <div
            class="c3"
            data-blade-component="base-box"
          >
            <p
              class="c4"
              data-blade-component="text"
            >
              3
            </p>
          </div>
          <p
            class="c5"
            data-blade-component="text"
          >
            Level 3
          </p>
        </div>
      </li>
    </ol>
  </div>
</div>
`;

exports[`<List /> should render small unordered List with icon 1`] = `
.c0.c0.c0.c0.c0 {
  list-style-type: none;
  padding: 0px;
  margin: 0px;
}

.c2.c2.c2.c2.c2 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  margin-bottom: 8px;
}

.c3.c3.c3.c3.c3 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-self: flex-start;
  -ms-flex-item-align: start;
  align-self: flex-start;
  margin-top: 4px;
  margin-right: 8px;
}

.c6.c6.c6.c6.c6 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-self: flex-start;
  -ms-flex-item-align: start;
  align-self: flex-start;
  margin-top: 6px;
  margin-right: 8px;
}

.c4.c4.c4.c4.c4 {
  color: hsla(212,39%,16%,1);
  font-family: "Inter","Inter Fallback Arial",Arial;
  font-size: 0.75rem;
  font-weight: 400;
  font-style: normal;
  -webkit-text-decoration-line: none;
  text-decoration-line: none;
  line-height: 1.125rem;
  -webkit-letter-spacing: 0px;
  -moz-letter-spacing: 0px;
  -ms-letter-spacing: 0px;
  letter-spacing: 0px;
  margin: 0;
  padding: 0;
}

.c1.c1.c1.c1.c1 {
  margin-left: 0;
}

.c5.c5.c5.c5.c5 {
  margin-left: 16px;
}

<div>
  <div
    class=""
    data-blade-component="base-box"
  >
    <ul
      class="List__StyledUnorderedList-bqf6r7-1 c0"
      data-blade-component="list"
      role="list"
    >
      <li
        class=" c1"
        data-blade-component="list-item"
      >
        <div
          class="c2"
          data-blade-component="base-box"
        >
          <div
            class="c3"
            data-blade-component="base-box"
          >
            <svg
              aria-hidden="true"
              class="Svgweb__StyledSvg-vcmjs8-0"
              data-blade-component="icon"
              fill="none"
              height="12px"
              viewBox="0 0 24 24"
              width="12px"
            >
              <path
                d="M14.7071 5.29289C14.3166 4.90237 13.6834 4.90237 13.2929 5.29289C12.9024 5.68342 12.9024 6.31658 13.2929 6.70711L17.5858 11H4C3.44772 11 3 11.4477 3 12C3 12.5523 3.44772 13 4 13H17.5858L13.2929 17.2929C12.9024 17.6834 12.9024 18.3166 13.2929 18.7071C13.6834 19.0976 14.3166 19.0976 14.7071 18.7071L20.7071 12.7071C21.0976 12.3166 21.0976 11.6834 20.7071 11.2929L14.7071 5.29289Z"
                data-blade-component="svg-path"
                fill="hsla(211, 22%, 56%, 1)"
              />
            </svg>
          </div>
          <p
            class="c4"
            data-blade-component="text"
          >
            Level 1
          </p>
        </div>
        <div
          class=""
          data-blade-component="base-box"
        >
          <ul
            class="List__StyledUnorderedList-bqf6r7-1 c0"
            data-blade-component="list"
            role="list"
          >
            <li
              class=" c5"
              data-blade-component="list-item"
            >
              <div
                class="c2"
                data-blade-component="base-box"
              >
                <div
                  class="c3"
                  data-blade-component="base-box"
                >
                  <svg
                    aria-hidden="true"
                    class="Svgweb__StyledSvg-vcmjs8-0"
                    data-blade-component="icon"
                    fill="none"
                    height="12px"
                    viewBox="0 0 24 24"
                    width="12px"
                  >
                    <path
                      d="M12.7071 3.29289C12.3166 2.90237 11.6834 2.90237 11.2929 3.29289L5.29289 9.29289C4.90237 9.68342 4.90237 10.3166 5.29289 10.7071C5.68342 11.0976 6.31658 11.0976 6.70711 10.7071L11 6.41421V20C11 20.5523 11.4477 21 12 21C12.5523 21 13 20.5523 13 20V6.41421L17.2929 10.7071C17.6834 11.0976 18.3166 11.0976 18.7071 10.7071C19.0976 10.3166 19.0976 9.68342 18.7071 9.29289L12.7071 3.29289Z"
                      data-blade-component="svg-path"
                      fill="hsla(150, 100%, 27%, 1)"
                    />
                  </svg>
                </div>
                <p
                  class="c4"
                  data-blade-component="text"
                >
                  Level 2
                </p>
              </div>
              <div
                class=""
                data-blade-component="base-box"
              >
                <ul
                  class="List__StyledUnorderedList-bqf6r7-1 c0"
                  data-blade-component="list"
                  role="list"
                >
                  <li
                    class=" c5"
                    data-blade-component="list-item"
                  >
                    <div
                      class="c2"
                      data-blade-component="base-box"
                    >
                      <div
                        class="c6"
                        data-blade-component="base-box"
                      >
                        <svg
                          aria-hidden="true"
                          class="Svgweb__StyledSvg-vcmjs8-0"
                          data-blade-component="icon"
                          fill="none"
                          height="6px"
                          viewBox="0 0 6 6"
                          width="6px"
                        >
                          <rect
                            data-blade-component="svg-rect"
                            fill="hsla(211, 22%, 56%, 1)"
                            fill-opacity="0.48"
                            height="6px"
                            rx="1px"
                            width="6px"
                          />
                        </svg>
                      </div>
                      <p
                        class="c4"
                        data-blade-component="text"
                      >
                        Level 3
                      </p>
                    </div>
                  </li>
                </ul>
              </div>
            </li>
          </ul>
        </div>
      </li>
    </ul>
  </div>
</div>
`;

exports[`<List /> should render unordered List of small size 1`] = `
.c0.c0.c0.c0.c0 {
  list-style-type: none;
  padding: 0px;
  margin: 0px;
}

.c2.c2.c2.c2.c2 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  margin-bottom: 8px;
}

.c3.c3.c3.c3.c3 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-self: flex-start;
  -ms-flex-item-align: start;
  align-self: flex-start;
  margin-top: 6px;
  margin-right: 8px;
}

.c4.c4.c4.c4.c4 {
  color: hsla(212,39%,16%,1);
  font-family: "Inter","Inter Fallback Arial",Arial;
  font-size: 0.75rem;
  font-weight: 400;
  font-style: normal;
  -webkit-text-decoration-line: none;
  text-decoration-line: none;
  line-height: 1.125rem;
  -webkit-letter-spacing: 0px;
  -moz-letter-spacing: 0px;
  -ms-letter-spacing: 0px;
  letter-spacing: 0px;
  margin: 0;
  padding: 0;
}

.c1.c1.c1.c1.c1 {
  margin-left: 4px;
}

.c5.c5.c5.c5.c5 {
  margin-left: 16px;
}

<div>
  <div
    class=""
    data-blade-component="base-box"
  >
    <ul
      class="List__StyledUnorderedList-bqf6r7-1 c0"
      data-blade-component="list"
      role="list"
    >
      <li
        class=" c1"
        data-blade-component="list-item"
      >
        <div
          class="c2"
          data-blade-component="base-box"
        >
          <div
            class="c3"
            data-blade-component="base-box"
          >
            <svg
              aria-hidden="true"
              class="Svgweb__StyledSvg-vcmjs8-0"
              data-blade-component="icon"
              fill="none"
              height="6px"
              viewBox="0 0 6 6"
              width="6px"
            >
              <circle
                cx="3px"
                cy="3px"
                data-blade-component="svg-circle"
                fill="hsla(211, 22%, 56%, 1)"
                fill-opacity="0.48"
                r="3px"
              />
            </svg>
          </div>
          <p
            class="c4"
            data-blade-component="text"
          >
            Level 1
          </p>
        </div>
        <div
          class=""
          data-blade-component="base-box"
        >
          <ul
            class="List__StyledUnorderedList-bqf6r7-1 c0"
            data-blade-component="list"
            role="list"
          >
            <li
              class=" c5"
              data-blade-component="list-item"
            >
              <div
                class="c2"
                data-blade-component="base-box"
              >
                <div
                  class="c3"
                  data-blade-component="base-box"
                >
                  <svg
                    aria-hidden="true"
                    class="Svgweb__StyledSvg-vcmjs8-0"
                    data-blade-component="icon"
                    fill="none"
                    height="6px"
                    viewBox="0 0 6 6"
                    width="6px"
                  >
                    <circle
                      cx="3px"
                      cy="3px"
                      data-blade-component="svg-circle"
                      r="2.5px"
                      stroke="hsla(211, 22%, 56%, 1)"
                    />
                  </svg>
                </div>
                <p
                  class="c4"
                  data-blade-component="text"
                >
                  Level 2
                </p>
              </div>
              <div
                class=""
                data-blade-component="base-box"
              >
                <ul
                  class="List__StyledUnorderedList-bqf6r7-1 c0"
                  data-blade-component="list"
                  role="list"
                >
                  <li
                    class=" c5"
                    data-blade-component="list-item"
                  >
                    <div
                      class="c2"
                      data-blade-component="base-box"
                    >
                      <div
                        class="c3"
                        data-blade-component="base-box"
                      >
                        <svg
                          aria-hidden="true"
                          class="Svgweb__StyledSvg-vcmjs8-0"
                          data-blade-component="icon"
                          fill="none"
                          height="6px"
                          viewBox="0 0 6 6"
                          width="6px"
                        >
                          <rect
                            data-blade-component="svg-rect"
                            fill="hsla(211, 22%, 56%, 1)"
                            fill-opacity="0.48"
                            height="6px"
                            rx="1px"
                            width="6px"
                          />
                        </svg>
                      </div>
                      <p
                        class="c4"
                        data-blade-component="text"
                      >
                        Level 3
                      </p>
                    </div>
                  </li>
                </ul>
              </div>
            </li>
          </ul>
        </div>
      </li>
    </ul>
  </div>
</div>
`;
